test/e2e/conformance/tests/httproute-limit.yaml
# Copyright (c) 2022 Alibaba Group Holding Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/route-limit-rps: "10"
    higress.io/route-limit-burst-multiplier: "2"
  name: higress-http-route-limit-rps10
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: limiter.higress.io
      http:
        paths:
          - path: /rps10
            pathType: Exact
            backend:
              service:
                name: infra-backend-v1
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/route-limit-rps: "50"
    higress.io/route-limit-burst-multiplier: "2"
  name: higress-http-route-limit-rps50
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: limiter.higress.io
      http:
        paths:
          - path: /rps50
            pathType: Exact
            backend:
              service:
                name: infra-backend-v1
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/route-limit-rps: "10"
    higress.io/route-limit-burst-multiplier: "3"
  name: higress-http-route-limit-rps10-burst3
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: limiter.higress.io
      http:
        paths:
          - path: /rps10/burst3
            pathType: Exact
            backend:
              service:
                name: infra-backend-v1
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/route-limit-rpm: "10"
    higress.io/route-limit-burst-multiplier: "2"
  name: higress-http-route-limit-rpm10
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: limiter.higress.io
      http:
        paths:
          - path: /rpm10
            pathType: Exact
            backend:
              service:
                name: infra-backend-v1
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/route-limit-rpm: "10"
    higress.io/route-limit-burst-multiplier: "3"
  name: higress-http-route-limit-rpm10-burst3
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: limiter.higress.io
      http:
        paths:
          - path: /rpm10/burst3
            pathType: Exact
            backend:
              service:
                name: infra-backend-v1
                port:
                  number: 8080
